--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <tr>
                     <th>Train Name</th>
                     <th>Destination</th>
-                    <th>Frequency</th>
+                    <th>Frequency (in minutes)</th>
                     <th>Next Arrival</th>
                     <th>Minutes Away</th>
                   </tr>
